--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/instafeed.js"></script>
-  <script src="/js/masonry.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <script type="text/javascript" src="js/instafeed.js"></script>
+  <script src="js/masonry.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <script src="//use.typekit.net/ilo0oai.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
+
   <title>#BestPresentEver</title>
 
 </head>
