--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       sortBy: 'most-recent',
       resolution: 'standard_resolution',
       limit: '60',
-      template: '<a href="{{link}}"><div class="image"><img src="{{image}}" /><div class="caption">{{caption}}</div></div></a>'
+      template: '<div class="image"><a href="{{link}}"><img src="{{image}}" /></a><div class="caption">{{caption}}</div></div>'
     });
     feed.run();
 
